0025005: Global function HashCodes() is not exported on Windows

HashCodes() is exported